Moved submit pages to main directory and redirected links

--- a/submit2.html
+++ b/submit2.html
@@ -6,16 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-
-        <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom styles for this page -->
-        <link href="../css/font-awesome.min.css" rel="stylesheet">
-        <link href="./submit.css" rel="stylesheet">
-
-        <!-- Custom title -->
         <title>Step 2 : Submit a Recipe</title>
+        <!-- Bootstrap core CSS -->
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom CSS files for this page -->
+        <link href="./css/font-awesome.min.css" rel="stylesheet">
+        <link href="./submit.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar Goes Here -->
@@ -61,11 +57,11 @@
         </div><!-- ./container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
-        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <!-- Custom JS files for this page -->
-        <script src="../js/header.js"></script>
-        <script src="../allen/navbar.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/navbar.js"></script>
         <script src="./submit.js"></script>
     </body>
 </html>
