--- a/submit3.html
+++ b/submit3.html
@@ -6,16 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-
-        <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom styles for this page -->
-        <link href="../css/font-awesome.min.css" rel="stylesheet">
-        <link href="./submit.css" rel="stylesheet">
-
-        <!-- Custom title -->
         <title>Step 3 : Submit a Recipe</title>
+        <!-- Bootstrap core CSS -->
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom styles for this page -->
+        <link href="./css/font-awesome.min.css" rel="stylesheet">
+        <link href="./submit.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar Goes Here -->
@@ -55,17 +51,17 @@
                     <a href="./submit2.html"><i class="fa fa-arrow-circle-left fa-3x"></i><span class="steptext">Previous Step</span></a>
                 </div>
                 <div class="goforward">
-                    <a href="../allen/home.html"><span class="steptext">Finish</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
+                    <a href="./home.html"><span class="steptext">Finish</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
                 </div>
             </section>
         </div><!-- ./container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
-        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
         <!-- Custom JS files for this page -->
-        <script src="../js/header.js"></script>
-        <script src="../allen/navbar.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/navbar.js"></script>
         <script src="./submit.js"></script>
     </body>
 </html>
