--- a/submit1.html
+++ b/submit1.html
@@ -6,14 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <!-- Custom title -->
         <title>Step 1 : Submit a Recipe</title>
-
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
-
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
-        <link href="../css/font-awesome.min.css" rel="stylesheet">
+        <link href="./css/font-awesome.min.css" rel="stylesheet">
         <link href="./submit.css" rel="stylesheet">
     </head>
     <body>
@@ -117,11 +114,11 @@
             </section>
         </div>
         <!-- JavaScript placed at the end of the document so the pages load faster -->
-        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../js/vendor/dropzone.js" type="text/javascript"></script>
-        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="../js/header.js" type="text/javascript"></script>
-        <script src="../allen/navbar.js"></script>
+        <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <script src="./js/vendor/dropzone.js" type="text/javascript"></script>
+        <script src="./js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="./js/header.js" type="text/javascript"></script>
+        <script src="./js/navbar.js"></script>
     </body>
 </html>
