--- a/index.html
+++ b/index.html
@@ -1,82 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>TLDRecipes</title>
+		<title>Welcome!</title>
 
-        <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
-        <link href="css/style.css" rel="stylesheet">
+		<!-- Font loading -->
+		<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600" rel="stylesheet" type="text/css">
 
-    </head>
+		<!-- Load global stylesheet -->
+		<link href="css/global.css" rel="stylesheet">
 
-    <body>
+		<!-- Custom styles for this template -->
+		<link href="css/home.css" rel="stylesheet">
 
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="" target="_blank">TL;DRecipes</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="allen/allen.html" target="_blank">Allen</a></li>
-                        <li><a href="advanced.html" target="_blank">Cassio</a></li>
-                        <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
-                        <li><a href="will/william.html" target="_blank">William</a></li>
-                    </ul>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="input-group">
-                                <input type="text" class="form-control">
-                                <div class="input-group-btn">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
-                                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </div><!-- /btn-group -->
-                            </div><!-- /input-group -->
-                        </div><!-- /.col-lg-6 -->
-                    </div><!-- /.row --><!-- This is the new search bar-->
-                </div><!--/.nav-collapse -->
-            </div>
-        </div>
+		<!-- Bootstrap core JavaScript -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="js/vendor/jquery-2.1.1.min.js"></script>
+		<script src="js/vendor/bootstrap.min.js"></script>
 
-        <div class="container">
+		<!-- Loads the navbar -->
+		<script src="js/navbar.js"></script>
 
+		<!-- Loads recipe listings -->
+		<script src="js/card.js"></script>
 
-            <div class="starter-template">
-                <h1>TLDRecipes</h1>
-                <p class="lead">A simple way to make and use recipes.
-                    <br> Search for your favorite recipes here.</p>
-            </div>
+		<!-- Loads head elements -->
+		<script src="js/header.js"></script>
 
-        </div><!-- /.container -->
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="js/ie10-viewport-bug-workaround.js"></script>
+	</head>
 
+	<body>
+		<div class="background-image">
+			<div class="jumbotron">
+				<h1>Welcome to TL;DR Recipes!</h1>
+				<p>A simple way to make and use recipes.</p>
+				<p>Search for your favorite recipes here.</p>
+				<p><a class="btn btn-primary btn-lg" href="new-user.html" role="button">Sign Up</a></p>
+			</div>
+		</div>
 
-    </body>
+		<div class="section">
+			<div class="container">
+				<h2>Recently Submitted</h2>
+			</div>
+			<div class="recipes" data-length="6"></div>
+		</div>
+
+		<div class="section">
+			<div class="container">
+				<h2>Most Popular</h2>
+			</div>
+			<div class="recipes" data-length="6"></div>
+		</div>
+
+		<div class="section">
+			<div class="container">
+				<h2>Highest Success Rate</h2>
+			</div>
+			<div class="recipes" data-length="6"></div>
+		</div>
+
+	</body>
 </html>
