Redirected navbar.js

--- a/userpage.html
+++ b/userpage.html
@@ -64,7 +64,7 @@
         <script src="../js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
         <script src="../js/header.js"></script>
-        <script src="../allen/navbar.js"></script>
-        <script src="../allen/card.js"></script>
+        <script src="../js/navbar.js"></script>
+        <script src="../js/card.js"></script>
     </body>
 </html>
