Added final step submit page. Fixed broken links in navbar

--- a/submit1.html
+++ b/submit1.html
@@ -11,10 +11,9 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link href="./submit.css" rel="stylesheet">
+        <link href="./css/submit.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Navbar Goes Here -->
         <div class="content">
             <div class="header">
                 <div class="title">Submit A Recipe</div>
@@ -103,11 +102,6 @@
                 </div>
             </section>
             <section>
-                                    <!--
-                                    <div class="goback faded">
-                                        <a href="#"><i class="fa fa-arrow-circle-left fa-3x"></i></a>
-                                    </div>
-                                    -->
                 <div class="goforward">
                     <a href="./submit2.html"><span class="steptext">Next Step</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
                 </div>
@@ -120,5 +114,6 @@
         <script src="./js/vendor/jquery-2.1.1.min.js"></script>
         <script src="./js/header.js" type="text/javascript"></script>
         <script src="./js/navbar.js"></script>
+        <script src="./js/submit.js"></script>
     </body>
 </html>
