--- a/submit2.html
+++ b/submit2.html
@@ -11,10 +11,9 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom CSS files for this page -->
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link href="./submit.css" rel="stylesheet">
+        <link href="./css/submit.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Navbar Goes Here -->
         <div class="content">
             <div class="header">
                 <div class="title">Submit A Recipe</div>
@@ -62,6 +61,6 @@
         <!-- Custom JS files for this page -->
         <script src="./js/header.js"></script>
         <script src="./js/navbar.js"></script>
-        <script src="./submit.js"></script>
+        <script src="./js/submit.js"></script>
     </body>
 </html>
