--- a/submit3.html
+++ b/submit3.html
@@ -11,10 +11,9 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this page -->
         <link href="./css/font-awesome.min.css" rel="stylesheet">
-        <link href="./submit.css" rel="stylesheet">
+        <link href="./css/submit.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Navbar Goes Here -->
         <div class="content">
             <div class="header">
                 <div class="title">Submit A Recipe</div>
@@ -51,7 +50,7 @@
                     <a href="./submit2.html"><i class="fa fa-arrow-circle-left fa-3x"></i><span class="steptext">Previous Step</span></a>
                 </div>
                 <div class="goforward">
-                    <a href="./home.html"><span class="steptext">Finish</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
+                    <a href="./submit4.html"><span class="steptext">Finish</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
                 </div>
             </section>
         </div><!-- ./container -->
@@ -62,6 +61,6 @@
         <!-- Custom JS files for this page -->
         <script src="./js/header.js"></script>
         <script src="./js/navbar.js"></script>
-        <script src="./submit.js"></script>
+        <script src="./js/submit.js"></script>
     </body>
 </html>
