moved files and updated links

--- a/sign-in.html
+++ b/sign-in.html
@@ -8,10 +8,10 @@
         <meta name="author" content="">
 
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
+        <link href="css/Sign-stylesheet.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>Sign in</title>
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div class="container">
-            <form class="form-signin" role="form" action="../allen/home.html">
+            <form class="form-signin" role="form" action="index.html">
                 <h2 class="form-signin-heading">Sign in to TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
                 <input type="password" class="form-control" placeholder="Password">
@@ -29,7 +29,7 @@
                     </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                <button class="btn btn-lg btn-primary btn-block" type="button" onclick="window.location.href = '../sid/new-user.html'">Create New Account</button>
+                <button class="btn btn-lg btn-primary btn-block" type="button" onclick="window.location.href = 'new-user.html'">Create New Account</button>
             </form>
         </div> <!-- /container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
