--- a/new-user.html
+++ b/new-user.html
@@ -8,10 +8,10 @@
         <meta name="author" content="">
 
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../sid/Sign-stylesheet.css" rel="stylesheet">
+        <link href="css/Sign-stylesheet.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>New User</title>
@@ -19,13 +19,13 @@
     </head>
     <body>
         <div class="container">
-            <form class="form-signin" role="form" action="../userpage.html">
+            <form class="form-signin" role="form" action="userpage.html">
                 <h2 class="form-signin-heading">Sign up for TL&#59;DRecipes</h2>
                 <input type="email" class="form-control" placeholder="Email address" autofocus="true">
                 <input type="name" class="form-control" placeholder="User Name">
                 <input type="password" class="form-control" placeholder="Password">
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-                <button onclick="window.location.href = '../sid/sign-in.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
+                <button onclick="window.location.href = 'sign-in.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
             </form>
         </div> <!-- /container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
