updated link on the user page and changed the about me text

--- a/userpage.html
+++ b/userpage.html
@@ -8,11 +8,11 @@
         <meta name="author" content="">
 
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../css/style.css" rel="stylesheet">
-        <link href="../css/userpage.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/userpage.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>pastafreak123</title>
@@ -26,7 +26,7 @@
                 <h1>pastafreak123</h1>
                 <br>
                 <div id="user-image">
-                    <img class="img-responsive" alt="200x200" src="../img/pastafreak123.png" data-holder-rendered="true">
+                    <img class="img-responsive" alt="200x200" src="img/pastafreak123.png" data-holder-rendered="true">
                 </div>
                 <br>
                 <h2>User info</h2>
@@ -34,7 +34,7 @@
                 <div id="user-info">
                     <ul>
                         <li>Recipes submitted: 3</li>
-                        <li>Recipes favored: 3</li>
+                        <li>Recipes favorited: 3</li>
                         <li>Joined at: Nov-8-2014 17:16 GMT-06:00</li>
                         <li>Last active: 2 days ago</li>
                     </ul>
@@ -43,7 +43,7 @@
                 <h2>About Me</h2>
                 <br>
                 <div id="about-me">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium urna ut risus cursus varius. Phasellus malesuada in dui quis fringilla. Sed in ligula id magna auctor imperdiet a aliquet diam. Pellentesque rutrum lacinia ultrices. Proin nec nulla tempor, efficitur eros at, sodales lacus. Mauris ut augue leo. In eget felis in purus viverra pretium. Maecenas vel tortor ullamcorper lorem sodales tempor sit amet ac justo. Ut id ultricies libero. Nam tempus odio vel gravida blandit. Morbi amet.</p>
+                    <p>I love pasta.  I eat pasta 3 meals a day.  Morning, noon and night I make and eat pasta.  I've made every pasta recipe known to man.  I love pasta.</p>
                 </div>
                 <br>
                 <h2>Submitted recipes</h2>
@@ -60,11 +60,11 @@
         </div><!-- /.container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
-        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../js/header.js"></script>
-        <script src="../js/navbar.js"></script>
-        <script src="../js/card.js"></script>
+        <script src="js/header.js"></script>
+        <script src="js/navbar.js"></script>
+        <script src="js/card.js"></script>
     </body>
 </html>
