--- a/recipe.html
+++ b/recipe.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Pasta Recipe</title>
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this page -->
-        <link href="./recipe.css" rel="stylesheet">
-        <!-- Custom title -->
-        <title>Pasta</title>
+        <link href="./css/font-awesome.min.css" rel="stylesheet">
+        <link href="./css/recipe.css" rel="stylesheet">
     </head>
     <body>
         <div class="content">
-
+            <p>Recipe stuff goes here </p>
         </div>
         <!-- JavaScript placed at the end of the document so the pages load faster -->
-        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
-        <script src="../js/header.js"></script>
+        <!-- jQuery and Bootstrap JS files -->
+        <script src="./js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="./js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <!-- Custom JS files for this page -->
+        <script src="./js/header.js"></script>
+        <script src="./js/navbar.js"></script>
+        <script src="./js/recipe.js"></script>
     </body>
 </html>
