--- a/submit4.html
+++ b/submit4.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Step 3 : Submit a Recipe</title>
+        <title>Recipe Submitted</title>
         <!-- Bootstrap core CSS -->
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this page -->
