Linked home page category headings

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 
 		<div class="section">
 			<div class="container">
-				<h2>Recently Submitted</h2>
+				<h2><a href="browse.html?category=Recently Submitted">Recently Submitted</a></h2>
 			</div>
 			<div class="recipes" data-length="6"></div>
 		</div>
 
 		<div class="section">
 			<div class="container">
-				<h2>Most Popular</h2>
+				<h2><a href="browse.html?category=Most Popular">Most Popular</a></h2>
 			</div>
 			<div class="recipes" data-length="6"></div>
 		</div>
 
 		<div class="section">
 			<div class="container">
-				<h2>Highest Success Rate</h2>
+				<h2><a href="browse.html?category=Highest Success Rate">Highest Success Rate</a></h2>
 			</div>
 			<div class="recipes" data-length="6"></div>
 		</div>
