Fixed advanced search page css/js paths

--- a/advanced.html
+++ b/advanced.html
@@ -8,11 +8,11 @@
         <meta name="author" content="">
 
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this page -->
-        <link href="../css/style.css" rel="stylesheet">
-        <link href="../css/advanced.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/advanced.css" rel="stylesheet">
 
         <!-- Custom title -->
         <title>Advanced Search</title>
@@ -25,7 +25,7 @@
             <div id="advanced-menu">
                 <h1>Advanced Search</h1>
                 <br>
-                <form id="advance_form" action="../allen/home.html">
+                <form id="advance_form" action="search-results.html">
                     <h2>Search recipes by user:</h2>
                     <div class="row">
                         <div class="col-lg-6">
@@ -128,10 +128,10 @@
         </div><!-- /.container -->
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
-        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <!-- Custom JS files for this page -->
-        <script src="../js/header.js"></script>
-        <script src="../js/navbar.js"></script>
+        <script src="js/header.js"></script>
+        <script src="js/navbar.js"></script>
     </body>
 </html>
