Recipe page header, picture, and ingredients list

--- a/recipe.html
+++ b/recipe.html
@@ -15,7 +15,77 @@
     </head>
     <body>
         <div class="content">
-            <p>Recipe stuff goes here </p>
+            <div class="header">
+                <div class="recipe-title">Pasta Pasta with Extra Pasta Sauce</div>
+                <div class="wrapper">
+                    <div class="success-rate">77% Success Rate</div>
+                    <span class="recipe-success">
+                        <div class="success-bar">
+                            <div class="success" style="width: 77%"></div>
+                        </div>
+                    </span>
+                </div>
+                <div class="recipe-attr">
+                    <a class="diet-icon vegetarian" data-tooltip="Vegetarian" data-color="#096b00">V</a>
+                    <a class="diet-icon vegan" data-tooltip="Vegan" data-color="#2a0">Vg</a>
+                    <a class="diet-icon gluten" data-tooltip="Gluten-Free" data-color="#c46f0e">Gl</a>
+                </div>
+                <div class="recipe-author">By: <a href="./userpage.html">pastafreak123</a></div>
+                <div class="recipe-pic"><img src="./img/card.jpg" alt="GIVE ME PASTA OR GIVE ME DEATH"></div>
+                <!--
+                <div class="recipe-timesuccess">
+                    <span class="recipe-time">1 Hour 30 Minutes</span>
+                    <span class="recipe-success"><span class="bold">53%</span> success rate</span>
+                </div>
+                -->
+                <hr width="66%">
+                <div class="wrapper">
+                    <div class="ingredients-list">
+                        <h3>Ingredients List</h3>
+                        <div class="ingr-row">
+                            <div class="ingr-header"></div>
+                            <div class="ingr-header"></div>
+                            <div class="ingr-header"></div>
+                        </div>
+                        <div class="ingr-row even">
+                            <div class="ingr-cell ingr-num">1</div>
+                            <div class="ingr-cell">Pepper</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row">
+                            <div class="ingr-cell ingr-num">2</div>
+                            <div class="ingr-cell">Boxes of Pasta</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row even">
+                            <div class="ingr-cell ingr-num">1</div>
+                            <div class="ingr-cell">Teaspoon of Salt</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row">
+                            <div class="ingr-cell ingr-num">4</div>
+                            <div class="ingr-cell">Cans of Tomato Sauce</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row even">
+                            <div class="ingr-cell ingr-num">10</div>
+                            <div class="ingr-cell">Cups of Water</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row">
+                            <div class="ingr-cell ingr-num">1</div>
+                            <div class="ingr-cell">Avocado</div>
+                            <div class="ingr-cell"></div>
+                        </div>
+                        <div class="ingr-row even">
+                            <div class="ingr-cell ingr-num">1</div>
+                            <div class="ingr-cell">Drop of African Children Tears</div>
+                            <div class="ingr-cell swap"><i class="fa fa-refresh"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer"></div>
         </div>
         <!-- JavaScript placed at the end of the document so the pages load faster -->
         <!-- jQuery and Bootstrap JS files -->
