Added user cards

--- a/allen/card.html
+++ b/allen/card.html
@@ -18,6 +18,8 @@
 
 		<!-- Custom styles for this template -->
 		<link href="../css/browse.css" rel="stylesheet">
+		<link href="../css/card.css" rel="stylesheet">
+		<link href="../css/container-fix.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -43,10 +45,44 @@
 			<div class="listing-wrapper">
 				<div class="listing-inner-wrapper">
 					<ul class="listing">
-						<li class="card">
-							<div class="user-card-img" style="background-image: url('../img/pastafreak123.png')"></div>
-							<div class="user-card-recipes">
-								
+						<li class="user card">
+							<div class="user-info">
+								<a href="userpage.html" class="user-card-img">
+									<span style="background-image: url('../img/pastafreak123.png')"></span>
+								</a>
+								<div class="user-stats">
+									<div class="user-name"><a href="userpage.html">pastafreak123</a></div>
+									<div>Joined: Nov 8, 2014</div>
+									<div>Last active: 2 days ago</div>
+								</div>
+							</div>
+							<div class="user-recipes">
+								<div class="user-recipes-heading">Recipes Submitted</div>
+								<ul class="user-recipe-list">
+									<li class="recipe-img">
+										<a href="recipe.html">
+											<span style="background-image: url('../img/card.jpg')"></span>
+										</a>
+									</li>
+									<li class="recipe-img">
+										<a href="recipe.html">
+											<span style="background-image: url('../img/card.jpg')"></span>
+										</a>
+									</li>
+									<li class="recipe-img">
+										<a href="recipe.html">
+											<span style="background-image: url('../img/card.jpg')"></span>
+										</a>
+									</li>
+									<li class="recipe-img">
+										<a href="recipe.html">
+											<span style="background-image: url('../img/card.jpg')"></span>
+										</a>
+									</li>
+									<li class="recipe-img more">
+										<a href="browse.html?category=pastafreak123's Recipes"><span class="vcenter">+10000</span></a>
+									</li>
+								</ul>
 							</div>
 						</li>
 					</ul>
