Vote buttons and prototype functionality added

--- a/recipe.html
+++ b/recipe.html
@@ -84,6 +84,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="wrapper">
+                    <!-- List View -->
+                    <div class="instructions list">
+
+                    </div>
+                    <!-- Step-By-Step View -->
+                    <div class="instructions carousel">
+
+                    </div>
+                </div>
+                <hr width="66%">
+                <div class="wrapper">
+                    <h3>Did it work?</h3>
+                    <div class="btn-group vote">
+                        <button type="button" class="btn btn-default">Yes</button>
+                        <button type="button" class="btn btn-default">No</button>
+                    </div>
+                    <div class="vote-thanks">
+                        <p>Thank you! Your vote has been recorded and will help improve the quality of recipes on this site.</pd>
+                    </div>
+                </div>
             </div>
             <div class="footer"></div>
         </div>
